--- a/giggidy/config/database.yml
+++ b/giggidy/config/database.yml
@@ -1,17 +1,20 @@
 development:
   adapter: postgresql
+  host: localhost
   encoding: unicode
   database: giggidy_dev
   pool: 5
 
 test:
   adapter: postgresql
+  host: localhost
   encoding: unicode
   database: giggidy_test
   pool: 5
 
 production:
   adapter: postgresql
+  host: localhost
   encoding: unicode
   database: giggidy_production
   pool: 5
